--- a/Layouts/Layout 1.uistate.xml
+++ b/Layouts/Layout 1.uistate.xml
@@ -23,11 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Darkness" />
+    <active-layer name="Things" />
     <layers>
         <layer locked="1" name="background" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Things" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Darkness" parallax-in-editor="0" visible="0" />
-        <layer locked="0" name="UI" parallax-in-editor="0" visible="1" />
+        <layer locked="1" name="UI" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
